test/tests/compiler/18_structures/invalid_parse/plx1_type_after_line.plx
pub fn main(none) i32 {
    { ; } type struc s1(x: i32, y: i32)
}
